[package]
name = "MarkyBot"
version = "0.1.0"

[dependencies]
tokio-irc-client = "0.2.1"
markov = "0.0.33"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
error-chain = "0.10"
pircolate = "0.2"
tokio-tls = "0.1"
native-tls = "0.1"
tokio-pool = "0.1.0"
futures-cpupool = "0.1.5"
regex = "0.2"
glob = "0.2.11"
nom = "^3.1"
itertools = "0.6.0"
lazysort = "^0.1"
lazy_static = "0.2"
edit-distance = "^1.0.0"
rayon = "0.8.2"
